cmake_minimum_required(VERSION 3.20)
project(CPP_Data_Structures_and_Algorithms_ch01)

set(CMAKE_CXX_STANDARD 17)

add_executable(ch01_amortized Amortized/amortized.cpp)
add_executable(ch01_assignment_operator_overload Assignment_Operator_Overload/assignment_operator_overload.cpp)
add_executable(ch01_class_templates Class_Templates/class_templates.cpp)
add_executable(ch01_constructor Constructor/constructor.cpp)
add_executable(ch01_derived_class Derived_Class/derived_class.cpp)
add_executable(ch01_do_while Do_While/do_while.cpp)
add_executable(ch01_enum Enum/enum.cpp)
add_executable(ch01_first_app First_App/first_app.cpp)
add_executable(ch01_for For/for.cpp)
add_executable(ch01_function_templates Function_Templates/funtion_templates.cpp)
add_executable(ch01_if If/if.cpp)
add_executable(ch01_if_elseif If_Else_If/if_else_if.cpp)
add_executable(ch01_if_elseif_2 If_Else_If_2/if_else_if_2.cpp)
add_executable(ch01_looping Looping/looping.cpp)
add_executable(ch01_pairing Pairing/pairing.cpp)
add_executable(ch01_recursive Recursive/recursive.cpp)
add_executable(ch01_search Search/search.cpp)
add_executable(ch01_simple_class Simple_Class/simple_class.cpp)
add_executable(ch01_struct Struct/struct.cpp)
add_executable(ch01_switch Switch/switch.cpp)
add_executable(ch01_templates Templates/templates.cpp)
add_executable(ch01_while While/while.cpp)
add_executable(ch01_in_out In_Out/in_out.cpp)
add_executable(ch01_simple Simple/simple.cpp)